# non-childish-game

./: .gitignore
non-childish-game/: init_db.py  main.py
non-childish-game/auth_service/: pyproject.toml
non-childish-game/auth_service/api/: auth_routes.py
non-childish-game/auth_service/crud/: auth_crud.py
non-childish-game/auth_service/models/: user.py
non-childish-game/auth_service/schemas/: auth_schemas.py
non-childish-game/auth_service/utils/: hash_utils.py
non-childish-game/game_service/: pyproject.toml
non-childish-game/game_service/api/: game_routes.py
non-childish-game/game_service/crud/: character_crud.py
non-childish-game/game_service/models/: alliance.py  character.py  resource.py
non-childish-game/game_service/schemas/: game_schemas.py
non-childish-game/game_service/utils/: game_logic.py
non-childish-game/shared/: database.py  pyproject.toml
