[project]
name = "auth-service"
version = "0.1.0"
description = ""
authors = [
    {name = "ejik-sasha",email = "112908553+ejik-sasha@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.6,<0.116.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "pydantic[dotenv] (>=2.10.5,<3.0.0)",
    "python-jose (>=3.3.0,<4.0.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "databases (>=0.9.0,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.2"
pytest = "^8.3.4"

