[project]
name = "shared"
version = "0.1.0"
description = ""
authors = [
    {name = "ejik-sasha",email = "112908553+ejik-sasha@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "kafka-python (>=2.0.2,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aiomysql (>=0.2.0,<0.3.0)",
    "databases (>=0.9.0,<0.10.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
